...
                                title: const Text('Da'),
                                leading: Radio<String>(
                                  key: const Key('KeyDa'),
                                  value: "False",
                                  groupValue: _character,
...
                          const Text("Šta te motiviše?"),
                          TextFormField(
                            key: const Key('TextFieldKey2'),
                            style: const TextStyle(
                                color: Colors.black, fontSize: 18),
...
                              "Da li imaš ili si imao/la neki hobi ili se baviš nekim sportom?"),
                          TextFormField(
                            key: const Key('TextFieldKey3'),
                            style: const TextStyle(
                                color: Colors.black, fontSize: 18),
...
                              "Postoji li neko interesovanje koje imaš, ali ga trenutno ne možeš ostvariti?"),
                          TextFormField(
                            key: const Key('TextFieldKey4'),
                            style: const TextStyle(
                                color: Colors.black, fontSize: 18),
...
                              "Da li bi vodio/la brigu o kucnom ljubimcu svojih komsija dok su oni na godisnjem odmoru?"),
                          TextFormField(
                            key: const Key('TextFieldKey5'),

                            style: const TextStyle(
...
                              "Kapetan si piratskog broda, tvoja posada može da glasa kako se dijeli zlato. Ako se manje od polovine pirata složi sa tobom, umrijet ćeš. Kakvu podjelu zlata bi predložio/la tako da dobiješ dobar dio plijena, a ipak preživiš?"),
                          TextFormField(
                            key: const Key('TextFieldKey6'),
                            style: const TextStyle(
                                color: Colors.black, fontSize: 18),
...
                                    ),
                                    TextFormField(
                                      key: const Key('urlKey1'),
                                      style: const TextStyle(
                                          color: Colors.grey, fontSize: 18),
...

                                    YoutubePlayer(
                                      key: const Key('ytKiDrugaVelicina'),
                                      controller: _controller,
                                      aspectRatio: 16 / 9,
...
                      children: [
                        ElevatedButton(
                            key: const Key('posaljikey'),
                            onPressed: () async {
                              if (_formKey.currentState!.validate() &&
...
                                ElevatedButton.styleFrom(primary: Colors.black),
                            child: Text(
                              'Posalji',
                            )),

...
                          : widget.role.id == 'backend'
                              ? displayRole = 'Backend'
                              : widget.role.id == 'uiux'
                                  ? displayRole = 'UI/UX Design'
                                  : widget.role.id == 'productManager'
                                      ? displayRole = 'Project Management'
                                      : widget.role.id == 'qa'
                                          ? displayRole = 'QA Engineering'
                                          : displayRole,
...
