...
  final TextEditingController cityController = TextEditingController();
  final TextEditingController phoneNumberController = TextEditingController();
  final TextEditingController emailController = TextEditingController();
  final TextEditingController passwordController = TextEditingController();
  String? _statusValue;
  List<String> statusList = [
    'Student',
    'Employed',
    'Unemployed',
  ];

  final _signupFormKey = GlobalKey<FormState>();
  bool nameErrored = false;
...
                              crossAxisAlignment: CrossAxisAlignment.center,
                              children: <Widget>[
                                Row(
                                  children: [
                                    Flexible(
                                      child: TextFormField(
                                        key: const Key("nameKey"),
                                        controller: nameController,
                                        validator: (value) {
                                          String pattern = r'^[a-zA-Z]+$';
                                          RegExp regExp = RegExp(pattern);
                                          if (value!.isEmpty) {
                                            setState(() {
...
                                        ),
                                      ),
                                    ),
                                    const SizedBox(width: 16),
                                    Flexible(
                                      child: TextFormField(
                                        key: const Key("surnameKey"),
                                        controller: surnameController,
                                        validator: (value) {
                                          String pattern = r'^[a-zA-Z]+$';
                                          RegExp regExp = RegExp(pattern);
                                          if (value!.isEmpty) {
                                            setState(() {
...
                                  ],
                                ),
                                const SizedBox(height: 16),
                                TextFormField(
                                  controller: birthDateController,
                                  keyboardType: TextInputType.datetime,
                                  key: const Key("birthDateKey"),
                                  inputFormatters: [
                                    dateMaskFormatter,
                                  ],
                                  onChanged: (value) {
                                    var year = int.tryParse(value.substring(6));
                                    print(value.substring(5));
...
                                  ),
                                ),
                                const SizedBox(height: 16),

                                ////
                                TextFormField(
                                  key: const Key("cityKey"),
                                  controller: cityController,
                                  validator: (value) {
                                    if (value!.isEmpty) {
                                      return "Please fill the required field.";
                                    }
                                  },
...
                                    border: OutlineInputBorder(),
                                    label: Text("City"),
                                  ),
                                ),
                                const SizedBox(height: 16),
                                DropdownButtonFormField<String>(
                                  key: const Key("statusKey"),
                                  hint: const Text('Status',
                                      style: TextStyle(
                                          fontSize: 14,
                                          fontWeight: FontWeight.w700)),
                                  icon: const Icon(Icons.keyboard_arrow_down),
                                  decoration: InputDecoration(
...
                                      });
                                    }
                                  },
                                ),
                                const SizedBox(height: 16),
                                TextFormField(
                                  key: const Key("phoneNumberKey"),
                                  controller: phoneNumberController,
                                  validator: (value) {
                                    if (value!.isEmpty) {
                                      return "Please fill the required field.";
                                    }
                                    return null;
...
                                    border: OutlineInputBorder(),
                                    label: Text("Phone"),
                                  ),
                                ),
                                const SizedBox(height: 16),
                                TextFormField(
                                  key: const Key("emailKey"),
                                  controller: emailController,
                                  onChanged: (value) {
                                    setState(() {
                                      _isEmailCorrect = isEmail(value);
                                    });
                                  },
...
                                        ? "Invalid email format"
                                        : null,
                                  ),
                                ),
                                const SizedBox(height: 16),
                                TextFormField(
                                  key: const Key("passwordKey"),
                                  controller: passwordController,
                                  onChanged: (value) {
                                    setState(() {
                                      _isPassCorrect = validatePassword(value);
                                    });
                                  },
...
                                const Text(
                                  "By creating an account, you agree to our  Terms and have read and acknowledge the Global Privacy Statement",
                                  style: TextStyle(fontSize: 10),
                                ),
                                const SizedBox(height: 32),
                                ElevatedButton(
                                  key: const Key("createAccountKey"),
                                  onPressed: () async {
                                    setState(() {
                                      isButtonPressed = true;
                                    });

                                    if (_signupFormKey.currentState!
...
