...

                                          if (value.length == 1) {
                                            FocusScope.of(context).nextFocus();
                                          }
                                        },
                                        controller: _code1,
                                        key: const Key("code1Key"),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  vertical: 25),
                                          focusedBorder: OutlineInputBorder(
                                            borderRadius:
...

                                          if (value.length == 1) {
                                            FocusScope.of(context).nextFocus();
                                          }
                                        },
                                        controller: _code2,
                                        key: const Key("code2Key"),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  vertical: 25),
                                          focusedBorder: OutlineInputBorder(
                                            borderRadius:
...

                                          if (value.length == 1) {
                                            FocusScope.of(context).nextFocus();
                                          }
                                        },
                                        controller: _code3,
                                        key: const Key("code3Key"),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  vertical: 25),
                                          focusedBorder: OutlineInputBorder(
                                            borderRadius:
...

                                          if (value.length == 1) {
                                            FocusScope.of(context).nextFocus();
                                          }
                                        },
                                        controller: _code4,
                                        key: const Key("code4Key"),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  vertical: 25),
                                          focusedBorder: OutlineInputBorder(
                                            borderRadius:
...
                                    const SizedBox(
                                      width: 7,
                                    ),
                                    Flexible(
                                      child: TextFormField(
                                        controller: _code5,
                                        key: const Key("code5Key"),
                                        onChanged: (value) {
                                          setState(() {
                                            code5Str = value;
                                          });

                                          if (value.length == 1) {
...

                                          if (value.length == 1) {
                                            FocusScope.of(context).nextFocus();
                                          }
                                        },
                                        controller: _code6,
                                        key: const Key("code6Key"),
                                        decoration: InputDecoration(
                                          contentPadding:
                                              const EdgeInsets.symmetric(
                                                  vertical: 25),
                                          focusedBorder: OutlineInputBorder(
                                            borderRadius:
...
                                        height: 1,
                                      ),
                                const SizedBox(
                                  height: 25,
                                ),
                                ElevatedButton(
                                  key: const Key("verifyConfirmationKey"),
                                  onPressed: () async {
                                    if (clickCounter == 0) {
                                      _startTimer();
                                    }
                                    setState(() {
                                      notSendCodeAgainPressed = true;
...
