...
                          width: (120 / 1440) * width,
                        ),
                        const SizedBox(
                          height: 21,
                        ),
                        Text(
                          "Congratulations",
                          style: GoogleFonts.outfit(
                            fontSize: (60 / 1440) * width,
                            fontWeight: FontWeight.w700,
                          ),
                        ),
                        const SizedBox(
...
